# somhunter

./: .gitignore  Dockerbase  app.js  config.json  cpp_inference  docker_build.sh  extract_features.cpp  mx_to_cpp.py  package-lock.json  package.json  run.sh
core/: SomHunterNapi.cpp  SomHunterNapi.h  binding.gyp
core/src/: AsyncSom.cpp  CMakeLists.txt  Collage.h  CollageRanker.cpp  CollageRanker.h  DatasetFeatures.cpp  DatasetFrames.cpp  ImageManipulator.cpp  ImageManipulator.h  KeywordRanker.cpp  RelevanceScores.cpp  RelevanceScores.h  SOM.cpp  SomHunter.cpp  SomHunter.h  Submitter.cpp  config.h  config_json.h  log.h  main.cpp  utils.h
extractor/models/: npytobin.py
public/stylesheets/: collage_ui.css
routes/: endpoints.js
views/: collage_ui.ejs  somhunter.ejs  somhunter_event_handlers.ejs
views/common/: header.ejs
